<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="147dp"
        android:layout_height="63dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="36dp"
        android:text="@string/label_for_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarCustomDiscount" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/text_box_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewEntryBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/label_for_entry_box"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimalPrice"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewSaleGroupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_for_sale_group"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntryBoxLabel" />

    <RadioGroup
        android:id="@+id/RadioGroupPercents"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:checkedButton="@id/radioButtonTen"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSaleGroupLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimalPrice">

        <RadioButton
            android:id="@+id/radioButtonTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_percent" />

        <RadioButton
            android:id="@+id/radioButtonFifteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percent" />

        <RadioButton
            android:id="@+id/radioButtonEighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteen_percent" />

        <RadioButton
            android:id="@+id/radioButtonCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_percent" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewCustomPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/label_for_custom_percent"
        app:layout_constraintEnd_toEndOf="@+id/textViewSaleGroupLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewSaleGroupLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaleGroupLabel" />

    <SeekBar
        android:id="@+id/seekBarCustomDiscount"
        android:layout_width="289dp"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="42dp"
        android:max="50"
        android:progress="25"
        app:layout_constraintStart_toEndOf="@+id/textViewCustomPercent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupPercents" />

    <TextView
        android:id="@+id/textViewSeekbarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupPercents" />

    <TextView
        android:id="@+id/textViewDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/label_for_discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarCustomDiscount" />

    <TextView
        android:id="@+id/textViewFinalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_for_final_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDiscount" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="147dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/label_for_reset"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalculate"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFinalPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>